    `FT_Set_Transform`.

  - A  new configuration  macro `FT_DEBUG_LOGGING`  is available.   It
    provides extended debugging capabilities for FreeType, for example
    showing a time stamp or displaying the component a tracing message
    comes from.  See file `docs/DEBUG` for more information.

    This work was Priyesh Kumar's GSoC 2020 project.

  - Improved Meson build support for the library.

  - Meson support to build The FreeType demo programs.

  - `ttdebug` didn't show changed point coordinates (bug introduced in
    version 2.10.3).


======================================================================

CHANGES BETWEEN 2.10.3 and 2.10.4 (2020-Oct-20)

  I. IMPORTANT BUG FIXES

  - A heap buffer overflow has been found  in the handling of embedded
    PNG bitmaps, introduced in FreeType version 2.6.

      https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-15999

    If you  use option  FT_CONFIG_OPTION_USE_PNG  you  should  upgrade
    immediately.


======================================================================

CHANGES BETWEEN 2.10.2 and 2.10.3 (2020-Oct-10)

  I. IMPORTANT CHANGES

  - New flag `FT_OUTLINE_OVERLAP'.  If set, make the smooth rasterizer
    do  4x4 oversampling  to  mitigate artifacts  in pixels  partially
    covered  by  overlapping  contours.    Note  that  this  at  least
    quadruples the rendering time.

    If  a  glyph  in  a  TrueType font  has  the  `OVERLAP_SIMPLE'  or
    `OVERLAP_COMPOUND'  bit set,  FreeType automatically  selects this
    rendering mode.


  II. MISCELLANEOUS

  - Using the  arcane method of  including FreeType header  files with
    macros like  `FT_FREETYPE_H' is no longer  mandatory (but retained
    as an optional feature for backward compatibility).

  - Support for  building the library  with Meson.  Building  the demo
    programs with Meson will follow in a forthcoming release.

  - Minor improvements to the B/W rasterizer.

  - Auto-hinter support for Medefaidrin script.
